adynamics3/css/globe.css
.mobile-view {
  display: none;

  img {
    height: 25rem;
    width: auto;
  }

  h2 {
    font-size: 1.3rem;
    text-align: center;
    color: rgb(26, 26, 26);
  }

  a {
    color: black;
    background-color: #49aaaa;
    padding: 0.5rem 1rem;
    border-radius: 1rem;
    text-decoration: none;
    margin-top: 1rem;
    font-size: 1.1rem;
    font-family: "Poppins", sans-serif;
    font-weight: 500;
  }

  .carousel-item {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: #f0f0f0d8;
    padding: 1rem;
    border-radius: 2rem;
  }
}

.india {
  display: none;
  position: absolute;
  top: 50%;
  left: 30%;
  overflow: hidden;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

.usa {
  display: none;
  position: absolute;
  top: 50%;
  left: 40%;
  overflow: hidden;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

.morocco {
  display: none;
  position: absolute;
  top: 30%;
  left: 30%;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

.tunisia {
  display: none;
  position: absolute;
  top: 85%;
  left: 30%;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

.south-africa {
  display: none;
  position: absolute;
  top: 70%;
  left: 30%;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

.argentina {
  display: none;
  position: absolute;
  top: 70%;
  left: 30%;
  z-index: 9999;

  .courses-item {
    background-color: rgb(255, 255, 255);
  }
}

path {
  transition: fill 0.1s linear;
}

path:hover {
  fill: #565656;
}

.map {
  width: 100rem;
  height: 100vh;
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
}

.map svg {
  width: 200rem;
  height: 100vh;
  top: 0;
  left: 15%;
  position: relative;
}

.map #india {
  fill: #46aaaa;
}

.map #usa {
  fill: #46aaaa;
}

.map #ethiopia {
  fill: #46aaaa;
}

.map #south_africa {
  fill: #46aaaa;
}

.south-africa {
  display: none;
  position: absolute;
  top: 20%;
  left: 30%;
  .courses-item{
    background-color: aliceblue;
  }
}

.usa {
  display: none;
  position: absolute;
  top: 40%;
  left: 30%;
  .courses-item{
    background-color: aliceblue;
  }
}

.ripple {
  background-color: #006857;
  width: 0.5em;
  height: 0.5em;
  border-radius: 200rem;
  animation: ripple 3s linear infinite;
  position: absolute;
  z-index: 999;
}

.ripple-1 {
  animation-delay: 0.1s;
  position: absolute;
  top: 15rem;
  left: 30rem;
}

.ripple-2 {
  animation-delay: 2s;
  position: absolute;
  top: 32.7rem;
  left: 54.4rem;
}

.mobile-view {
  display: none;
}

@keyframes ripple {
  0% {
    box-shadow: 0 0 0 0rem rgba(148, 148, 148, 0.2),
                0 0 0 0.4rem rgba(40, 139, 113, 0.2),
                0 0 0 1rem rgba(117, 117, 117, 0.2),
                0 0 0 1rem rgba(21, 148, 159, 0.306);
  }
  100% {
    box-shadow: 0 0 0 1rem rgba(21, 148, 159, 0.436),
                0 0 0 1.2rem rgba(21, 148, 159, 0.501),
                0 0 0 1.5rem rgba(21, 148, 159, 0.247),
                0 0 0 3rem rgba(21, 148, 159, 0.072);
  }
}

@media (max-width: 768px) {
  .map {
    display: none;
  }

  .mobile-view {
    display: block;
    margin: 1rem;
  }
}

